--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="construction">
-        <img src="Img/Main-logo-primary.png" class="logo">
+        <img src="Main-logo-primary.png" class="logo">
         <h1>Coming Soon!</h1>
         <p>If you're interested in supporting us or finding out more, please visit our IndieGoGo campaign!</p>
         <a
